2001-09-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* guardians.c (tconc_t, t_tconc):  Renamed tconc_t to t_tconc.

	(TCONC_IN):  Make sure that the cell word 0 is initialized last.

	(guardians_t, t_guardians):  Renamed guardians_t to t_guardians.

	(GUARDIAN, GUARDIAN_DATA):  Renamed GUARDIAN to GUARDIAN_DATA.

	(guardian_apply, scm_get_one_zombie, scm_make_guardian,
	mark_and_zombify):  Prefer !SCM_<foo> over SCM_N<foo>.

2001-09-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* guardians.c (mark_dependencies_in_tconc,
	whine_about_self_centered_zombies, scm_init_guardians):  Register
	the static global variable `self_centered_zombies' via
	scm_gc_register_root, to make some cdr-ing unnecessary.

2001-09-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* backtrace.c (display_backtrace_file,
	display_backtrace_file_and_line):  Use SCM_EQ_P when comparing SCM
	values, use SCM_FALSEP when comparing SCM values against #f.
	Thanks to Rob Browning for the bug report.

2001-09-12  Martin Baulig  <martin@home-of-linux.org>

	* strings.[ch] (scm_str2string): New function.

2001-09-06  Marius Vollmer  <mvo@zagadka.ping.de>

	* gc.c (scm_done_free): Always subtract size from scm_mallocated
	when computing nm, even if it's negative.
	(scm_must_malloc): Abort on overflow of scm_mtrigger.
	(scm_must_realloc): Likewise.

2001-09-01  Michael Livshin  <mlivshin@bigfoot.com>

	* numbers.c (scm_sys_check_number_conversions): new function,
	defined if Guile is compiled in debugging mode.  currently checks
	`scm_num2ulong', should check much much more.

	* num2integral.i.c (NUM2INTEGRAL): when converting a bignum to
	unsigned, ensure that it's positive.  thanks to Martin Baulig!
	
2001-08-31  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* __scm.h: Added new section about compile time selectable
	features.

	(long_long, ulong_long, scm_sizet, SCM_WNA, SCM_OUTOFRANGE,
	SCM_NALLOC, SCM_HUP_SIGNAL, SCM_INT_SIGNAL, SCM_FPE_SIGNAL,
	SCM_BUS_SIGNAL, SCM_SEGV_SIGNAL, SCM_ALRM_SIGNAL, SCM_GC_SIGNAL,